fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 
 }
 
+html{
+    overflow: hidden;
+}
+
 ._ActionsRSWP * {
     display: none;
 }
